--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>个人简介</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -31,12 +31,9 @@
             </nav>
             <div id="banner">
                 <div class="inner">
-                    <!-- <div class="hr"></div> -->
                     <h1>黄英苗</h1>
                     </br>
-                    <!-- <div class="hr"></div> -->
                     <p>15年毕业于深圳信息学院，开始从事web页面开发</p>
-                    <!-- <button>养&nbsp;我</button> -->
                     <div class="more">
                         <p><a href="#a1">更多</a></p>
                     </div>
@@ -60,13 +57,6 @@
                             <img class="pic pic6" _lazysrc="images/img-box-6.jpg" alt="beauty">
                         </div>
                     </div>
-                    <!-- <div class="img-box">
-                        <img class="pic pic1" src="images/img-box-1.jpg" alt="beauty">
-                        <img class="pic pic2" src="images/img-box-2.jpg" alt="beauty">
-                        <img class="pic pic3" src="images/img-box-3.jpg" alt="beauty">
-                        <img class="pic pic4" src="images/img-box-4.jpg" alt="beauty">
-                        <img class="pic pic6" src="images/img-box-6.jpg" alt="beauty">
-                    </div> -->
                 </div>
             </section>
             <section class="gray_section">
@@ -91,7 +81,7 @@
                 <div class="card_group">
                     <div class="card card_1">
                         <h2>H5</h2>
-                        <p>基本了H5新特性，可以进行webApp与hybirdApp开发</p>
+                        <p>了解H5新特性，可以进行web页面，webApp与hybirdApp开发</p>
                     </div>
                     <div class="card card_2">
                         <h2>CSS3</h2>
@@ -110,12 +100,6 @@
         </div>
         <!-- footer start -->
         <footer>
-            <!-- 			<ul class="share_group">
-				<li>item</li>
-				<li>item</li>
-				<li>item</li>
-				<li>item</li>
-			</ul> -->
             <div class="copy">
                 &copy 初见与入迷 - 2016
             </div>
