--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     </div>
                     <div id="mainContent">
                         <div class="img-box floorMain">
-                            <img class="pic pic1" _lazysrc="images/img-box-1.jpg" alt="beauty">
-                            <img class="pic pic2" _lazysrc="images/img-box-2.jpg" alt="beauty">
-                            <img class="pic pic3" _lazysrc="images/img-box-3.jpg" alt="beauty">
-                            <img class="pic pic4" _lazysrc="images/img-box-4.jpg" alt="beauty">
-                            <img class="pic pic6" _lazysrc="images/img-box-6.jpg" alt="beauty">
+                            <img class="pic pic1" src="images/img-box-1.jpg" alt="beauty">
+                            <img class="pic pic2" src="images/img-box-2.jpg" alt="beauty">
+                            <img class="pic pic3" src="images/img-box-3.jpg" alt="beauty">
+                            <img class="pic pic4" src="images/img-box-4.jpg" alt="beauty">
+                            <img class="pic pic6" src="images/img-box-6.jpg" alt="beauty">
                         </div>
                     </div>
                 </div>
@@ -106,9 +106,9 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="js/CJL.0.1.min.js"></script>
-    <script type="text/javascript" src="js/LazyLoad.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <!-- <script type="text/javascript" src="js/CJL.0.1.min.js"></script> -->
+    <!-- <script type="text/javascript" src="js/LazyLoad.js"></script> -->
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 
 </html>
