--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="zh-Hans">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"></meta>
 <title>作品展示</title>
 <link rel="stylesheet" href="css/viewer.min.css">
 <style>
@@ -11,8 +13,8 @@ html,body {
 	height: 100%;
 	background-image: url(./img/fancy_deboss.png)
 }
-#dowebok { padding-top: 100px; width: 100%; margin: 0 auto; font-size: 0; text-align: center;}
-#dowebok li {width: 200px; height: 150px; display: inline-block; margin-left: 1%; padding-top: 1%;}
+#dowebok { padding-top: 100px; padding-bottom: 100px; width: 100%; margin: 0 auto; font-size: 0; text-align: center;}
+#dowebok li {width: 30%; display: inline-block; margin-left: 1%; padding-top: 1%;}
 #dowebok li img { width: 100%; height: 100%;}
 </style>
 </head>
